--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@ text-align:left;
             <p>
 <a href="./build/web"><span>You want to go here.</span></a>
             </p>
+            <p>
+</p>
+            <p>
+<a href="https://github.com/DuendeInexistente/NASA/raw/master/build/web/rom/game.gb"><span>Ormaybe, to download the rom.</span></a>
+            </p>
 
         </div>
 </body>
