Added download link to online emulator

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ text-align:left;
             <p>
 </p>
             <p>
-<a href="https://github.com/DuendeInexistente/NASA/raw/master/build/web/rom/game.gb"><span>Ormaybe, to download the rom.</span></a>
+<a href="https://github.com/DuendeInexistente/NASA/raw/master/build/web/rom/game.gb"><span style="background:#ffffff">Ormaybe, to download the rom.</span></a>
             </p>
 
         </div>
